--- a/Documentation/assets/sass/theme-sans_serif-orange.scss
+++ b/Documentation/assets/sass/theme-sans_serif-orange.scss
@@ -1,10 +1,10 @@
 @charset 'UTF-8';
 
 // Fonts:
-$font-primary: "Roboto", sans-serif;
+$font-primary: 'Roboto', sans-serif;
 $font-sans-serif: true;
 
 // Colors:
-$color-primary: rgb(248, 154, 75);
+$color-primary: #e76947;
 
 @import "_base";
